PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Log lock_stat, config.gz, dmidecode to system logs
pts-core: Only show Apple options when running on macOS
pts-core: Add extra safeguard around FORCE_TIMES_TO_RUN for disabling dynamic run count
ob_auto_compare: Intelligently choose more relevant reference results
phodevi: macOS CPU temperature monitoring support
phodevi: Support for reading WattsUp Pro power meter data directly without utility using WATTS_UP_METER=<USB TTY>
phodevi: Report Google Compute Engine machine type as part of motherboard string
phodevi: Add dumpe2fs to system logs when running on EXT4 and root
phodevi: Add block size reporting
phodevi: CPU power reporting for Ampere Altra
phodevi: Various Ampere Altra hardware detection/reporting improvements
phodevi: Support reading CPU package power consumption on macOS using powermetrics

Phoronix Test Suite 10.0.1
21 October 2020

pts-core: Fix for older versions of PHP such as in RHEL7
pts-core: Add Thermald version reporting to system table when active
phodevi: Detection improvements for new CPUs
phodevi: Avoid "11th Gen Intel" CPU string
phodevi: Update for NVMe drive reporting with KIOXIA, Toshiba sometimes not reporting their brand first

Phoronix Test Suite 10.0.0
13 October 2020

pts-core: Ensure any post-run script is triggered still under halt-testing/skip-test conditions
pts-core: Allow batch processing of performance per dollar metrics
phodevi: Add Intel AMX presence detection
phodevi: Add detection for Intel Alder Lake, Jasper Lake, Sapphire Rapids, and others
phoromatic: Ensure Windows tests get displayed even if running the Phoromatic Server on Linux
flush_caches: Add module to flush system caches between runs
test_timeout: Add module to quit a test run if it exceeds a predefined time limit or 'auto' determination

Phoronix Test Suite 10.0.0 Milestone 3
1 October 2020

pts-core: Don't show Vulkan options if Vulkan support is known to be unavailable/broken