@@ -144,8 +144,6 @@ Supported Options:
   - all.memory
   - memory.temp
   - memory.usage
-  - all.network
-  - network.usage
   - all.swap
   - swap.usage
   - all.sys
