@@ -1,6 +1,7 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
-Phoronix Test Suite (Git)
+Phoronix Test Suite 10.2.0 Milestone 1
+21 November 2020
 
 pts-core: Log lock_stat, config.gz, dmidecode to system logs
 pts-core: Only show Apple options when running on macOS
